2006-04-11  Geoffrey Garen  <ggaren@apple.com>

        Reviewed by Maciej.

        Minor code cleanup -- passes all the JS tests.

        * kjs/object_object.cpp:
        (ObjectObjectImp::construct):
        (ObjectObjectImp::callAsFunction):

2006-04-11  Darin Adler  <darin@apple.com>

        - another attempt to fix Windows build -- Vector in Forward.h was not working

        * kxmlcore/Forward.h: Remove Vector.
        * kxmlcore/Vector.h: Add back default arguments, remove include of
        Forward.h.

2006-04-11  Darin Adler  <darin@apple.com>

        - try to fix Windows build -- HashForward.h was not working

        * kxmlcore/HashForward.h: Removed.

        * JavaScriptCore.xcodeproj/project.pbxproj: Remove HashForward.h.
        * kjs/collector.h: Remove use of HashForward.h.
        * kxmlcore/HashCountedSet.h: Remove include of HashForward.h, restore
        default arguments.
        * kxmlcore/HashMap.h: Ditto.
        * kxmlcore/HashSet.h: Ditto.

2006-04-11  David Harrison  <harrison@apple.com>

        Reviewed by Darin.

        - fixed clean build, broken by Darin's check-in

        * kjs/date_object.cpp: Add needed include of lookup.h.
        * kjs/regexp_object.cpp: Move include of .lut.h file below other includes.

2006-04-10  Darin Adler  <darin@apple.com>

        Rubber-stamped by John Sullivan.

        - switched from a shell script to a makefile for generated files
        - removed lots of unneeded includes
        - added new Forward.h and HashForward.h headers that allow compiling with
          fewer unneeded templates

        * DerivedSources.make: Added.
        * generate-derived-sources: Removed.
        * JavaScriptCore.xcodeproj/project.pbxproj: Added new files, changed to use
        DerivedSources.make.

        * kxmlcore/Forward.h: Added.
        * kxmlcore/HashForward.h: Added.

        * kxmlcore/HashCountedSet.h: Include HashForward for default args.
        * kxmlcore/HashMap.h: Ditto.